--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
-    <body>
+<html lang="en-US">
+    <head> <title>Rumia's Page of Wonders</title> </head>
+    <body style="background-color: darkslategray;">
         <h1>Test</h1>
         <p>test</p>
     </body>
