--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head> <title>Rumia's Page of Wonders</title> </head>
-    <body style="background-color: darkslategray;">
+    <body style="background-color: rgb(30, 34, 34);">
         <h1>Test</h1>
         <p>test</p>
     </body>
